--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,17 @@
 @import "@ionic/angular/css/text-alignment.css";
 @import "@ionic/angular/css/text-transformation.css";
 @import "@ionic/angular/css/flex-utils.css";
+
+ion-toolbar {
+    --background: #A56946;
+    color: white;
+}
+
+ion-buttons {
+    color: white;
+}
+
+ion-tab-bar {
+    --color: #82868F;
+    --color-selected: #316974;
+}
