--- a/src/app/recycle-add/recycle-add.page.html
+++ b/src/app/recycle-add/recycle-add.page.html
@@ -46,8 +46,8 @@
 
 
 
-
-  <ion-footer>
+<!--  
+ <ion-footer>
 <ion-card>
   <ion-grid>
     <ion-row class="ion-text-center">
@@ -70,5 +70,5 @@
     </ion-row>
   </ion-grid>
 </ion-card>
-</ion-footer>
+</ion-footer>-->
 
