--- a/src/app/trips/trips.page.html
+++ b/src/app/trips/trips.page.html
@@ -7,10 +7,39 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Trips</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-fab slot="fixed" horizontal="end" vertical="bottom" class="ion-padding">
+    <ion-fab-button>
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+  <ion-card id="overview-card">
+    <ion-card-header>
+      <ion-card-title><b>Overview</b></ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      <ion-grid class="ion-no-padding">
+        <ion-row>
+          <ion-col>
+            <ion-card-subtitle>Total Trips</ion-card-subtitle>
+            <span>212 Trips</span>
+          </ion-col>
+          <ion-col></ion-col>
+          <ion-col></ion-col>
+          <ion-col>
+            <ion-card-subtitle>Trips Today</ion-card-subtitle>
+            <span>4 Trips</span>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </ion-card-content>
+  </ion-card>
+  <span>Test</span>
 </ion-content>
