--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,11 +1,13 @@
-<form (submit)="login()">
+<div class="container">
+  <h2 class="welcome-text">Welcome</h2>
   <ion-item>
-    <ion-label position="floating">Username</ion-label>
-    <ion-input type="text" [(ngModel)]="username"></ion-input>
+    <p class="label1">Email</p>
+    <ion-input type="email" [(ngModel)]="username" name="email" class="input1"></ion-input>
   </ion-item>
   <ion-item>
-    <ion-label position="floating">Password</ion-label>
-    <ion-input type="password" [(ngModel)]="password"></ion-input>
+    <p class="label2">Password</p>
+    <ion-input type="password" [(ngModel)]="password" name="password" class="input2"></ion-input>
   </ion-item>
-  <ion-button expand="block" type="submit">Login</ion-button>
-</form>
+  <ion-button expand="block" class="login-button" (click)="login()">Log In</ion-button>
+  <p class="signup-text">Don't have an account? <a routerLink="/register">Sign up</a></p>
+</div>
