added register page

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,3 +1,4 @@
+<ion-content>
 <div class="container">
   <h2 class="welcome-text">Welcome</h2>
   <ion-item>
@@ -11,3 +12,4 @@
   <ion-button expand="block" class="login-button" (click)="login()">Log In</ion-button>
   <p class="signup-text">Don't have an account? <a routerLink="/register">Sign up</a></p>
 </div>
+</ion-content>
