--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,13 +1,23 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>register</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">register</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <div class="container">
+    <h2 class="welcome-text">Welcome</h2>
+    <ion-item>
+      <p class="label1">Name</p>
+      <ion-input type="text" [(ngModel)]="name" name="name" class="input1"></ion-input>
+    </ion-item>
+    <ion-item>
+      <p class="label2">Phone</p>
+      <ion-input type="tel" [(ngModel)]="phone" name="phone" class="input2"></ion-input>
+    </ion-item>
+    <ion-item>
+      <p class="label3">Email</p>
+      <ion-input type="email" [(ngModel)]="email" name="email" class="input3"></ion-input>
+    </ion-item>
+    <ion-item>
+      <p class="label4">Password</p>
+      <ion-input type="password" [(ngModel)]="password" name="password" class="input4"></ion-input>
+    </ion-item>
+    <ion-button expand="block" class="register-button" (click)="register()">Register</ion-button>
+    <p class="login-text">Already have an account? <a routerLink="/login">Log in</a></p>
+  </div>
 </ion-content>
