--- a/src/app/trips/trips.page.html
+++ b/src/app/trips/trips.page.html
@@ -13,7 +13,8 @@
       <ion-title size="large">Trips</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-fab slot="fixed" horizontal="end" vertical="bottom" class="ion-padding">
+
+  <ion-fab id="add-button" slot="fixed" horizontal="end" vertical="bottom" class="ion-padding">
     <ion-fab-button>
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
@@ -41,5 +42,6 @@
       </ion-grid>
     </ion-card-content>
   </ion-card>
+  
   <span>Test</span>
 </ion-content>
