--- a/src/global.scss
+++ b/src/global.scss
@@ -26,7 +26,7 @@
 @import "@ionic/angular/css/flex-utils.css";
 
 ion-toolbar {
-    --background: #A56946;
+    --background: #a56946;
     color: white;
 }
 
