--- a/src/app/trip-start/trip-start.page.html
+++ b/src/app/trip-start/trip-start.page.html
@@ -10,7 +10,7 @@
 <ion-content class="ion-padding">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">trip-start</ion-title>
+      <ion-title size="large">Start Trip</ion-title>
     </ion-toolbar>
   </ion-header>
 
