--- a/src/app/add-image/add-image.page.html
+++ b/src/app/add-image/add-image.page.html
@@ -16,6 +16,9 @@
     <ion-row justify-content-center>
       <ion-col size="4">
         <ion-button expand="block" (click)="takePhoto()">+</ion-button>
+        <div *ngIf="this.picture">
+        <img src="{{this.picture}}"></div>
+
       </ion-col>
       <ion-col size="4">
         <ion-button expand="block" (click)="takePhoto()">+</ion-button>
@@ -37,6 +40,7 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-
+<ion-footer>
   <ion-button expand="block" (click)="saveImages()">Save</ion-button>
+</ion-footer>
 </ion-content>
