--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
 
   <ion-tabs contentId="main-content">
     <ion-tab-bar slot="bottom">
-      <ion-tab-button tab="folder/home">
+      <ion-tab-button tab="home">
         <ion-icon name="home"></ion-icon>
         Home
       </ion-tab-button>
