--- a/src/app/items-inside/items-inside.page.html
+++ b/src/app/items-inside/items-inside.page.html
@@ -8,3 +8,14 @@
       </ion-buttons> 
   </ion-toolbar>
 </ion-header>
+<ion-tabs contentId="main-content">
+ 
+    
+    <ion-tab-button tab="KRT">
+
+      <ion-icon src="../../assets/Vector-qHZ">KRT <br><P> Recyclable</P></ion-icon>
+      
+    </ion-tab-button>
+ 
+</ion-tabs>
+
