--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -3,6 +3,15 @@
 
 /** Ionic CSS Variables **/
 :root {
+  --ion-color-orange: #a56946;
+	--ion-color-orange-rgb: 165,105,70;
+	--ion-color-orange-contrast: #000000;
+	--ion-color-orange-contrast-rgb: 0,0,0;
+	--ion-color-orange-shade: #915c3e;
+	--ion-color-orange-tint: #ae7859;
+
+
+  
   /** primary **/
   --ion-color-primary: #3880ff;
   --ion-color-primary-rgb: 56, 128, 255;
@@ -75,7 +84,14 @@
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
 }
-
+.ion-color-orange {
+	--ion-color-base: var(--ion-color-orange);
+	--ion-color-base-rgb: var(--ion-color-orange-rgb);
+	--ion-color-contrast: var(--ion-color-orange-contrast);
+	--ion-color-contrast-rgb: var(--ion-color-orange-contrast-rgb);
+	--ion-color-shade: var(--ion-color-orange-shade);
+	--ion-color-tint: var(--ion-color-orange-tint);
+}
 @media (prefers-color-scheme: light) {
   /*
    * Dark Colors
