--- a/src/app/add-image/add-image.page.html
+++ b/src/app/add-image/add-image.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar color="orange">
       <ion-title></ion-title>
       
       
@@ -15,32 +15,34 @@
   <ion-grid>
     <ion-row justify-content-center>
       <ion-col size="4">
-        <ion-button expand="block" (click)="takePhoto()">+</ion-button>
+        <ion-button color="medium" expand="block" (click)="takePhoto()">+</ion-button>
         <div *ngIf="this.picture">
         <img src="{{this.picture}}"></div>
 
       </ion-col>
       <ion-col size="4">
-        <ion-button expand="block" (click)="takePhoto()">+</ion-button>
+        <ion-button color="medium" expand="block" (click)="takePhoto()">+</ion-button>
+       
+  
       </ion-col>
       <ion-col size="4">
-        <ion-button expand="block" (click)="takePhoto()">+</ion-button>
+        <ion-button color="medium" expand="block" (click)="takePhoto()">+</ion-button>
       </ion-col>
     </ion-row>
     
     <ion-row content-center>
       <ion-col size="4">
-        <ion-button expand="block" (click)="takePhoto()">+</ion-button>
+        <ion-button color="medium"  expand="block" (click)="takePhoto()">+</ion-button>
       </ion-col>
       <ion-col size="4">
-        <ion-button expand="block" (click)="takePhoto()">+</ion-button>
+        <ion-button color="medium" expand="block" (click)="takePhoto()">+</ion-button>
       </ion-col>
       <ion-col size="4">
-        <ion-button expand="block" (click)="takePhoto()">+</ion-button>
+        <ion-button color="medium" expand="block" (click)="takePhoto()">+</ion-button>
       </ion-col>
     </ion-row>
   </ion-grid>
 <ion-footer>
-  <ion-button expand="block" (click)="saveImages()">Save</ion-button>
+  <ion-button color="orange" expand="block" (click)="saveImages()">Save</ion-button>
 </ion-footer>
 </ion-content>
