updated styling of qrentry,enterwaste& addpayment

--- a/src/app/add-payment/add-payment.page.html
+++ b/src/app/add-payment/add-payment.page.html
@@ -1,21 +1,22 @@
 <ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-buttons slot="start" (click)="navigateBacktoqrentry()">
+      <ion-icon style="color:#fff" name="chevron-back-outline"></ion-icon>
+    </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content>
   <ion-header collapse="condense">
   </ion-header>
   <div class="add-payment-VEP">
-    <div class="auto-group-sr8j-2k7">
-      <img class="expandleft-x7y" src="./assets/expandleft-jzX.png" routerLink="qrentry"/>
-    </div>
     <div class="group-3092-tXR">
       <div class="group-3032-qBm">
-        <ion-label class="text-here--BmR">Amount</ion-label>
-        <ion-input class="rectangle-1-WYo"></ion-input>
+        <p class="text-here--BmR">Amount</p>
+        <ion-input class="rectangle-1-WYo" type="number" placeholder="  Enter amount"></ion-input>
       </div>
-      <ion-button class="auto-group-t9ax-dtK">Submit</ion-button>
+      <ion-button color="#A56946" class="auto-group-t9ax-dtK" routerLink=" "><ion-label>Submit</ion-label></ion-button>
     </div>
   </div>
 </ion-content>
-
-
+  
