--- a/src/app/enter-waste/enter-waste.page.html
+++ b/src/app/enter-waste/enter-waste.page.html
@@ -1,4 +1,46 @@
 <ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-buttons slot="start" (click)="navigateBacktoqrentry()">
+      <ion-icon style="color:#fff" name="chevron-back-outline"></ion-icon>
+    </ion-buttons>
+    </ion-toolbar>
+</ion-header>
+
+<ion-content>
+  <ion-header collapse="condense">
+  </ion-header>
+  <div class="enter-waste-txF">
+    <div class="auto-group-ygvb-v8F">
+      <div class="auto-group-4igw-eK9">
+        <ion-label class="dry-waste-BZy">Dry Waste</ion-label>
+        <ion-checkbox class="rectangle-92-hYK"></ion-checkbox>
+      </div>
+      <div class="auto-group-yekh-p79">
+        <ion-label class="wet-waste-kFh">Wet Waste</ion-label>
+        <ion-checkbox class="rectangle-93-Gjq"></ion-checkbox>
+      </div>
+      <div class="auto-group-sknj-zQw">
+        <ion-label class="sanitary-waste-v3h">Sanitary Waste</ion-label>
+        <ion-checkbox class="rectangle-94-3PD"></ion-checkbox>
+      </div>
+      <div class="auto-group-ygnb-9SF">
+        <ion-label class="mixed-waste-gwy">Mixed Waste</ion-label>
+        <ion-checkbox class="rectangle-95-CfR"></ion-checkbox>
+      </div>
+      <div class="auto-group-7dxd-itf">
+        <ion-label class="no-waste-Ftb">No Waste</ion-label>
+        <ion-checkbox class="rectangle-97-C39"></ion-checkbox>
+      </div>
+      <ion-button color="#A56946" 
+      class="auto-group-jxjh-Jrs" routerLink=" "><ion-label>Continue</ion-label></ion-button>
+    </div>
+  </div>
+</ion-content>
+
+
+
+
+<!--<ion-header [translucent]="true">
 </ion-header>
 
 <ion-content [fullscreen]="true">
@@ -31,4 +73,4 @@
     </div>
   </div>
 </ion-content>
-
+-->
