--- a/src/app/qrscan/qrscan.page.html
+++ b/src/app/qrscan/qrscan.page.html
@@ -1,22 +1,23 @@
-<ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>Barcode Scanner</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [style.--background]="scanActive ? '#00000000' : '#fff'">
-  <ion-button expand="full" (click)="startScanner()" [hidden]="scanActive">
-    <!--<ion-icon name="scan" slot="start"></ion-icon>-->
-    Start Scan
-  </ion-button>
-  <p class="ion-text-center" *ngIf="result && !scanActive">{{ result }}</p>
-
-  <ion-row class="scanner-buttons" [hidden]="!scanActive">
-    <ion-col class="ion-no-padding">
-      <ion-button expand="full" (click)="stopScanner()">Stop</ion-button>
-    </ion-col>
-  </ion-row>
-
-  <div class="scan-box"></div>
-</ion-content>
-
+<ion-header [translucent]="true">
+    <ion-toolbar color="#A56946">
+      <ion-button slot="start">
+        <ion-icon style="color:#fff" name="chevron-back-outline"></ion-icon>
+      </ion-button>
+    </ion-toolbar>
+  </ion-header>
+  
+  <ion-content>
+    <ion-list>
+      <ion-item *ngFor="let barcode of barcodes">
+        <ion-label position="stacked">{{ barcode.format }}</ion-label>
+        <ion-input type="text" [value]="barcode.rawValue"></ion-input>
+      </ion-item>
+    </ion-list>
+    <ion-fab slot="fixed" vertical="bottom" horizontal="end">
+      <ion-fab-button (click)="scan()" [disabled]="!isSupported">
+        <ion-icon name="scan"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+  </ion-content>
+  
+  
