--- a/src/app/add-payment/add-payment.page.scss
+++ b/src/app/add-payment/add-payment.page.scss
@@ -1,20 +1,25 @@
+ion-header {
+  /* Maintain desired dimensions */
+  width: 100%;
+  height: 48px;
 
-html {
-	font-size:62.5%;
+  ion-icon {
+    width: 24px;
+    height: 24px;
+    top: 12px;
+    left: 8px;
+    padding: 6px 0;
+    display: flex;
+  }
 }
-* {
-	margin: 0;
-	padding: 0;
+ion-content {
+  background-color: #ffffff; /* Adjust background color */
+  padding: 20px;
+  width: 100%;
+
 }
-ul, li {
-	list-style: none;
-}
-input {
-	border: none;
-}
-body {
-  width: 36rem;
-}.add-payment-VEP {
+
+.add-payment-VEP {
   box-sizing: border-box;
   padding-bottom: 32.9rem;
   width: 100%;
@@ -25,62 +30,78 @@ body {
   flex-direction: column;
   background-color: #ffffff;
 }
-.add-payment-VEP .auto-group-sr8j-2k7 {
-  margin-bottom: 28.1rem;
-  box-sizing: border-box;
-  padding: 1.8rem 1.7rem;
-  width: 100%;
-  background-color: #a56946;
-  flex-shrink: 0;
-}
-.add-payment-VEP .auto-group-sr8j-2k7 .expandleft-x7y {
-  margin-right: 32rem;
-  width: 0.6rem;
-  height: 1.2rem;
-  object-fit: contain;
-  vertical-align: top;
-}
 .add-payment-VEP .group-3092-tXR {
-  margin: 0 2.8rem;
-  width: calc(100% - 5.6rem);
+  width: 304px;
+  height: 142px;
+  //top: 329px;
+  margin-top: 50px;
+  left: 28px;
+  margin: 2.8rem;
+  //width: calc(100% - 5.6rem);
   align-items: center;
   display: flex;
   flex-direction: column;
   flex-shrink: 0;
+
 }
 .add-payment-VEP .group-3092-tXR .group-3032-qBm {
+  
+  width: 304px;
+  height: 68px;
+  top: 329px;
+  left: 28px;
   margin-bottom: 2rem;
-  width: 100%;
+  //width: 100%;
   display: flex;
   flex-direction: column;
-  border-radius: 0.8rem;
+  border-radius: 8px;
   flex-shrink: 0;
 }
 .add-payment-VEP .group-3092-tXR .group-3032-qBm .text-here--BmR {
-  font-size: 1.2rem;
+
+  width: 48px;
+  height: 18px;
+  //top: 329px;
+  //left: 28px;
+
+  font-family: Poppins;
+  font-size: 12px;
   font-weight: 400;
-  line-height: 1.5;
-  color: rgb(1, 0, 0);
-  font-family: Poppins, 'Source Sans Pro';
-  white-space: nowrap;
+  line-height: 18px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: #00000066;
   flex-shrink: 0;
+  
 }
 .add-payment-VEP .group-3092-tXR .group-3032-qBm .rectangle-1-WYo {
-  width: 100%;
-  height: 5rem;
-  background-color: rgba(225, 225, 225, 0.5);
-  border-radius: 0.8rem;
+
+  width: 304px;
+  height: 50px;
+  //top: 347px;
+  //left: 28px;
+  border-radius: 8px;
+  background: #E1E1E180;
   flex-shrink: 0;
 }
 .add-payment-VEP .group-3092-tXR .auto-group-t9ax-dtK {
-  width: 100%;
-  height: 5.4rem;
-  font-size: 1.2rem;
+
+  width: 304px;
+  height: 54px;
+  top: 417px;
+  left: 28px;
+  border-radius: 10px;
+
+  font-family: Poppins;
+  font-size: 12px;
   font-weight: 500;
-  line-height: 1.6666666667;
-  letter-spacing: 0.03rem;
-  color: #ffffff;
-  font-family: Poppins, 'Source Sans Pro';
+  line-height: 20px;
+  letter-spacing: 0.30000001192092896px;
+  color: #FFFFFF;
+  text-align: left;
+  white-space: nowrap;
+  //width: 100%;
+  //height: 5.4rem;
   white-space: nowrap;
   display: flex;
   align-items: center;
