trips ui completed

--- a/src/app/trips/trips.page.html
+++ b/src/app/trips/trips.page.html
@@ -42,9 +42,10 @@
       </ion-grid>
     </ion-card-content>
   </ion-card>
-  
-  <div id="trips-for-the-day">
-    <p id="side-heading">Trips for the Day</p>
+ 
+  <p id="side-heading">Trips for the Day</p>
+
+  <div id="trips-for-the-day" [hidden]="false">
     <ion-card id="trips-for-the-day-card">  
       <ion-card-content>
         <ion-item class="ion-no-padding">
@@ -99,10 +100,75 @@
 
           <ion-row>
             <ion-col>
-              <ion-button expand="block">End Trip</ion-button>
+              <ion-button id="end-trip-button" expand="block" (click)="endTrip('trips-for-the-day')">End Trip</ion-button>
             </ion-col>
           </ion-row>
         </ion-grid>
+      </ion-card-content>
+    </ion-card>
+  </div>
+
+  <p id="side-heading">Past Trips</p>
+  <div id="past-trips" [hidden]="false">
+    <ion-card id="past-trips-card">  
+      <ion-card-content>
+        <ion-item id="past-trips-item" class="ion-no-padding" lines="none">
+          <ion-grid class="ion-no-padding">
+            <ion-row style="padding-bottom: 5%;">
+              <ion-col>
+                <ion-card-subtitle>Date</ion-card-subtitle>
+                <span>01-01-2024</span>
+              </ion-col>
+              <ion-col></ion-col>
+              <ion-col>
+                <ion-card-subtitle>Vehicle Number</ion-card-subtitle>
+                <span>KA00 AAAA0000</span>
+              </ion-col>
+            </ion-row>
+    
+            <ion-row style="padding-bottom: 5%;">
+              <ion-col>
+                <ion-card-subtitle>Start Time</ion-card-subtitle>
+                <span>10:30 AM</span>
+              </ion-col>
+              <ion-col></ion-col>
+              <ion-col>
+                <ion-card-subtitle>End Time</ion-card-subtitle>
+                <span>01:30 PM</span>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-item>
+
+        <div id="past-trips-expand" class="ion-no-padding" hidden>
+          <ion-grid class="ion-no-padding" style="padding-bottom: 0%;">
+            <ion-row style="padding-bottom: 5%; padding-top: 5%;">
+              <ion-col>
+                <ion-card-subtitle>Driver Name</ion-card-subtitle>
+                <span>Raju A</span>
+              </ion-col>
+            </ion-row>
+  
+            <ion-row style="padding-bottom: 5%;">
+              <ion-col>
+                <ion-card-subtitle>Line Employee 1</ion-card-subtitle>
+                <span>Raju B</span>
+              </ion-col>
+            </ion-row>
+  
+            <ion-row>
+              <ion-col>
+                <ion-card-subtitle>Line Employee 2</ion-card-subtitle>
+                <span>Raju C</span>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </div>
+        
+        <ion-button class="ion-no-padding" fill="clear" expand="block"
+         (click)="expand('past-trips-item','past-trips-expand','expand-icon')">
+          <ion-icon id="expand-icon" name="chevron-down-outline"></ion-icon>
+        </ion-button>
       </ion-card-content>
     </ion-card>
   </div>
