trips ui update

--- a/src/app/trips/trips.page.html
+++ b/src/app/trips/trips.page.html
@@ -43,7 +43,7 @@
     </ion-card-content>
   </ion-card>
  
-  <p id="side-heading">Trips for the Day</p>
+  <p class="side-heading" id="trips-for-the-day-heading">Trips for the Day</p>
 
   <div id="trips-for-the-day" [hidden]="false">
     <ion-card id="trips-for-the-day-card">  
@@ -108,7 +108,7 @@
     </ion-card>
   </div>
 
-  <p id="side-heading">Past Trips</p>
+  <p class="side-heading" id="past-trips-heading">Past Trips</p>
   <div id="past-trips" [hidden]="false">
     <ion-card id="past-trips-card">  
       <ion-card-content>
