add trip update

--- a/src/app/trip-end/trip-end.page.html
+++ b/src/app/trip-end/trip-end.page.html
@@ -54,6 +54,6 @@
     </ion-row>
   </ion-grid>
 
-  <ion-button expand="block">End Trip</ion-button>
+  <ion-button expand="block" (click)="endTrip()">End Trip</ion-button>
 
 </ion-content>
