--- a/src/app/trips/trips.page.html
+++ b/src/app/trips/trips.page.html
@@ -15,7 +15,7 @@
   </ion-header>
 
   <ion-fab id="add-button" slot="fixed" horizontal="end" vertical="bottom" class="ion-padding">
-    <ion-fab-button>
+    <ion-fab-button (click)="addTrip()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
