--- a/src/app/trip-end/trip-end.page.html
+++ b/src/app/trip-end/trip-end.page.html
@@ -28,8 +28,8 @@
         <ion-input aria-label="start-time" type="Time" disabled="true" value="10:30"></ion-input>
       </ion-col>
       <ion-col>
-        <span>Start Time</span>
-        <ion-input aria-label="time" type="Time" value="13:30"></ion-input>
+        <span>End Time</span>
+        <ion-input aria-label="time" type="Time" value="{{ time }}"></ion-input>
       </ion-col>
     </ion-row>
 
